src/test/ui/generic-associated-types/issue-47206-where-clause.stderr
error: type-generic associated types are not yet implemented
  --> $DIR/issue-47206-where-clause.rs:7:5
   |
LL |     type Assoc3<T>;
   |     ^^^^^^^^^^^^^^^
   |
   = note: for more information, see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error: aborting due to previous error

